Specify a min height on images to stop page jumping around on load.

--- a/views/master.scss
+++ b/views/master.scss
@@ -61,6 +61,10 @@ code {
   border-radius: 3px;
 }
 
+pre > code {
+  display: block;
+}
+
 .container {
   margin-bottom: 3em;
 }
@@ -173,6 +177,7 @@ figure.intro {
   }
   img {
     width: 100%;
+    min-height: 90vh;
   }
 }
 
